syntax = "proto3";
package kratos.api;

option go_package = "brillinkmicros/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }

  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message Nats {
    string uri = 1;
    bool activate = 2;
  }
  message BlAuth {
    string client_id = 1;
    string client_secret = 2;
    string url = 3;
    string path_check_token = 4;
    Database database = 5;
  }
  message Neo4j {
    string url = 1;
    string username = 2;
    string password = 3;
  }
  message Minio {
    string endpoint = 1;
    string access_key = 2;
    string secret_key = 3;
    bool use_ssl = 4;
  }
  message MongoDb {
    string uri = 1;
  }
  Database database = 1;
  Redis redis = 2;
  Nats nats = 3;
  BlAuth blAuth = 4;
  Neo4j neo4j = 5;
  Minio minio = 6;
  MongoDb mongoDb = 7;
}
