syntax = "proto3";

package api.graph.v1;

import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/empty.proto";

option go_package = "brillinkmicros/api/graph/v1;v1";
option java_multiple_files = true;
option java_outer_classname = "GraphV1";
option java_package = "api.graph.v1";


service NetGraphService {

  rpc GetNetExpand(NetExpandReq) returns (NetResp) {
    option (google.api.http) = {
      get: "/micros/graph/v1/net/expand"
    };
  }

  rpc GetNetExpands(NetExpandsReq) returns (NetResp) {
    option (google.api.http) = {
      get: "/micros/graph/v1/net/expands"
    };
  }

  rpc GetNode(GetNodeReq) returns (NodeResp) {
    option (google.api.http) = {
      get: "/micros/graph/v1/net/node"
    };
  }

  rpc GetChildrenNet(GetPaginationNodeReq) returns (NetPaginationResp) {
    option (google.api.http) = {
      get: "/micros/graph/v1/net/children"
    };
  }

  rpc GetParentsNet(GetPaginationNodeReq) returns (NetPaginationResp) {
    option (google.api.http) = {
      get: "/micros/graph/v1/net/parents"
    };
  }

  rpc GetAvailableRelTypeToChildren(GetNodeReq) returns (AvailableRelTypeResp) {
    option (google.api.http) = {
      get: "/micros/graph/v1/net/children/availableRelType"
    };
  }

  rpc GetAvailableRelTypeToParents(GetNodeReq) returns (AvailableRelTypeResp) {
    option (google.api.http) = {
      get: "/micros/graph/v1/net/parents/availableRelType"
    };
  }

  rpc GetPathBetween(GetPathBetweenReq) returns (NetResp) {
    option (google.api.http) = {
      get: "/micros/graph/v1/net/pathBetween"
    };
  }

  rpc GetConst(google.protobuf.Empty) returns (NetConstResp) {
    option (google.api.http) = {
      get : "/micros/graph/v1/net/const"
    };
  }

}

message NetConstResp {
    google.protobuf.Struct availableRelScope = 1;
    string netDemoDefaultId = 2;
}


message GetPathBetweenReq {
  string sourceId = 1;
  string targetId = 2;
  int64 maxDepth = 3;
  repeated string relScope = 4;
}

message AvailableRelTypeResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  google.protobuf.Struct data = 4;
}

//enum RelType {
//  ALL = 0;
//  ATTACH_TO = 1;
//  CLASSIFY_OF = 2;
//  INVOICED_TO = 3;
//}


message GetNodeReq {
  string id = 1;
}
message NetExpandsReq {
  repeated string ids = 1;
  uint32 depth = 2;
  uint32 limit = 3;
  repeated string relScope = 4;
}

message NetExpandReq {
  string id = 1;
  uint32 depth = 2;
  uint32 limit = 3;
  repeated string relScope = 4;
}

message GetPaginationNodeReq {
  uint32 page_num = 1;
  uint32 page_size = 2;
  string id = 3;
  repeated string scope_rel_type = 4;
}

message Node {
	string id = 1;
	string title = 3;
	repeated string labels = 4;
	google.protobuf.Struct data = 5;
}

message Edge {
	string source = 1;
	string target = 2;
	string id = 3;
	string label = 4;
	google.protobuf.Struct data = 5;
}

message Net {
	repeated Node nodes = 1;
	repeated Edge edges = 2;
}


message NodeResp {
	bool success = 1;
	int32 code = 2;
	string msg = 3;
	Node data = 4;
}

message NetResp {
	bool success = 1;
	int32 code = 2;
	string msg = 3;
	Net data = 4;
}

message NetPaginationResp {
  bool success = 1;
  int32 code = 2;
  string msg = 3;
  int32 total = 5;
  int32 current = 6;
  int32 page_size = 7;
  Net data = 8;
}